syntax="proto3";

package proto;
option go_package="./;proto";

import "mom_common.proto";
import "production_line.proto";

message MaterialStoreInfo{
    string id=1;
    //代号
    string code=2;
    //描述
    string description=3;
    //备注
    string remark=4;
    //支援产线
    repeated MaterialStoreAvailableLineInfo productionLines=5;
}

message MaterialStoreAvailableLineInfo{
    string id=1;
    string materialStoreID=2;
    string productionLineID=3;
    ProductionLineInfo productionLine=4;
}

message QueryMaterialStoreRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=3;
    //代号或描述
    // @inject_tag: uri:"code" form:"code"
    string code=4;
}

message QueryMaterialStoreResponse{
    Code code=1;
    string message=2;
    repeated MaterialStoreInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllMaterialStoreResponse{
    Code code=1;
    string message=2;
    repeated MaterialStoreInfo data=3;
}

message GetMaterialStoreDetailResponse{
    Code code=1;
    string message=2;
    MaterialStoreInfo data=3;
}